--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
         <li class="item"><a href="" class="card">member1</a></li>
         <li class="item"><a href="" class="card">member2</a></li>
         <li class="item"><a href="" class="card">member3</a></li>
+        <li class="item"><a href="" class="card">member4</a></li>
       </ul>
     </section>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
