--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,10 @@
         <li class="item"><a href="" class="card">member4</a></li>
       </ul>
     </section>
+
+    <footer>
+      <a href="" class="logo">Logo</a>
+    </footer>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
 
